# esg-rag

./: .gitignore  pyproject.toml
src/: index.py  ingest.py  query.py
