[project]
name = "esg-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "pymupdf>=1.28.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# 2. Tell uv to pull PyTorch packages from this explicit index on Windows
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" }
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" }
]
